cmake_minimum_required(VERSION 3.5)

project(webrtc_modules)

add_subdirectory(rtc_base)
add_subdirectory(p2p)

set(SRCS 
 api/audio_options.cc
 api/candidate.cc
 api/dtls_transport_interface.cc
 api/jsep.cc
 api/jsep_ice_candidate.cc
 api/rtc_error.cc
 api/rtp_parameters.cc
 api/video_codecs/video_codec.cc
 api/video/hdr_metadata.cc
 api/video/encoded_image.cc
 api/video/encoded_frame.cc
 api/video/video_frame.cc
 api/video/video_frame_buffer.cc
 api/video/video_frame.cc
 api/video/video_source_interface.cc
 api/video/video_bitrate_allocation.cc
 api/video/color_space.cc
 api/video/video_content_type.cc
 api/video/video_timing.cc
 api/video/video_bitrate_allocator.cc
 api/video_codecs/video_decoder.cc
 api/video_codecs/video_encoder.cc
 api/video_codecs/video_codec.cc
 api/video_codecs/sdp_video_format.cc
 api/rtp_parameters.cc
 api/media_types.cc
 api/units/data_rate.cc
 api/units/data_size.cc
 api/units/frequency.cc
 api/rtc_error.cc
 api/rtp_transceiver_interface.cc
 api/rtp_receiver_interface.cc
 api/rtp_sender_interface.cc
 api/media_stream_interface.cc
 api/proxy.cc
 api/rtp_packet_info.cc
 api/audio_options.cc
 api/rtc_event_log/rtc_event.cc
 api/rtp_headers.cc
 api/units/timestamp.cc
 api/units/time_delta.cc
 api/task_queue/task_queue_base.cc
 api/transport/network_types.cc
 api/transport/stun.cc
 api/transport/field_trial_based_config.cc
 api/crypto/crypto_options.cc
 api/dtls_transport_interface.cc
 api/candidate.cc
 api/jsep.cc
 api/jsep_ice_candidate.cc
 api/audio_codecs/audio_format.cc
 api/call/transport.cc

 call/rtp_demuxer.cc

 common_video//generic_frame_descriptor/generic_frame_info.cc
 common_video//h264/h264_bitstream_parser.cc
 common_video//h264/h264_common.cc
 common_video//h264/pps_parser.cc
 common_video//h264/sps_parser.cc
 common_video//h264/sps_vui_rewriter.cc

 media/base/codec.cc
 media/base/h264_profile_level_id.cc
 media/base/media_constants.cc
 media/base/rid_description.cc
 media/base/rtp_utils.cc
 media/base/stream_params.cc
 media/base/turn_utils.cc
 media/base/vp9_profile.cc

 common_video/generic_frame_descriptor/generic_frame_info.cc
 common_video/h264/h264_bitstream_parser.cc
 common_video/h264/h264_common.cc
 common_video/h264/pps_parser.cc
 common_video/h264/sps_parser.cc
 common_video/h264/sps_vui_rewriter.cc
 common_video/generic_frame_descriptor/generic_frame_info.cc
 common_video/h264/h264_bitstream_parser.cc
 common_video/h264/h264_common.cc
 common_video/h264/pps_parser.cc
 common_video/h264/sps_parser.cc
 common_video/h264/sps_vui_rewriter.cc

 modules/include/module_common_types.cc
 modules/audio_processing/include/audio_processing_statistics.cc
 modules/audio_processing/include/audio_processing_statistics.cc
 modules/video_coding/encoded_frame.cc
 modules/video_coding/include/video_codec_interface.cc
 modules/remote_bitrate_estimator/test/bwe_test_logging.cc
 modules/remote_bitrate_estimator/remote_estimator_proxy.cc

 modules/rtp_rtcp/include/report_block_data.cc
 modules/rtp_rtcp/include/rtp_rtcp_defines.cc
 modules/rtp_rtcp/source/absolute_capture_time_receiver.cc
 modules/rtp_rtcp/source/absolute_capture_time_sender.cc
 modules/rtp_rtcp/source/create_video_rtp_depacketizer.cc
 modules/rtp_rtcp/source/dtmf_queue.cc
 modules/rtp_rtcp/source/fec_private_tables_bursty.cc
 modules/rtp_rtcp/source/fec_private_tables_random.cc
 modules/rtp_rtcp/source/flexfec_header_reader_writer.cc
 modules/rtp_rtcp/source/flexfec_receiver.cc
 modules/rtp_rtcp/source/flexfec_sender.cc
 modules/rtp_rtcp/source/forward_error_correction.cc
 modules/rtp_rtcp/source/forward_error_correction_internal.cc
 modules/rtp_rtcp/source/packet_loss_stats.cc
 modules/rtp_rtcp/source/receive_statistics_impl.cc
 modules/rtp_rtcp/source/remote_ntp_time_estimator.cc
 modules/rtp_rtcp/source/rtcp_nack_stats.cc
 modules/rtp_rtcp/source/rtcp_packet.cc
 modules/rtp_rtcp/source/rtcp_packet/app.cc
 modules/rtp_rtcp/source/rtcp_packet/bye.cc
 modules/rtp_rtcp/source/rtcp_packet/common_header.cc
 modules/rtp_rtcp/source/rtcp_packet/compound_packet.cc
 modules/rtp_rtcp/source/rtcp_packet/dlrr.cc
 modules/rtp_rtcp/source/rtcp_packet/extended_reports.cc
 modules/rtp_rtcp/source/rtcp_packet/fir.cc
 modules/rtp_rtcp/source/rtcp_packet/loss_notification.cc
 modules/rtp_rtcp/source/rtcp_packet/nack.cc
 modules/rtp_rtcp/source/rtcp_packet/pli.cc
 modules/rtp_rtcp/source/rtcp_packet/psfb.cc
 modules/rtp_rtcp/source/rtcp_packet/rapid_resync_request.cc
 modules/rtp_rtcp/source/rtcp_packet/receiver_report.cc
 modules/rtp_rtcp/source/rtcp_packet/remb.cc
 modules/rtp_rtcp/source/rtcp_packet/remote_estimate.cc
 modules/rtp_rtcp/source/rtcp_packet/report_block.cc
 modules/rtp_rtcp/source/rtcp_packet/rrtr.cc
 modules/rtp_rtcp/source/rtcp_packet/rtpfb.cc
 modules/rtp_rtcp/source/rtcp_packet/sdes.cc
 modules/rtp_rtcp/source/rtcp_packet/sender_report.cc
 modules/rtp_rtcp/source/rtcp_packet/target_bitrate.cc
 modules/rtp_rtcp/source/rtcp_packet/tmmb_item.cc
 modules/rtp_rtcp/source/rtcp_packet/tmmbn.cc
 modules/rtp_rtcp/source/rtcp_packet/tmmbr.cc
 modules/rtp_rtcp/source/rtcp_packet/transport_feedback.cc
 modules/rtp_rtcp/source/rtcp_receiver.cc
 modules/rtp_rtcp/source/rtcp_sender.cc
 modules/rtp_rtcp/source/rtp_dependency_descriptor_extension.cc
 modules/rtp_rtcp/source/rtp_dependency_descriptor_reader.cc
 modules/rtp_rtcp/source/rtp_dependency_descriptor_writer.cc
 modules/rtp_rtcp/source/rtp_descriptor_authentication.cc
 modules/rtp_rtcp/source/rtp_format.cc
 modules/rtp_rtcp/source/rtp_format_h264.cc
 modules/rtp_rtcp/source/rtp_format_video_generic.cc
 modules/rtp_rtcp/source/rtp_format_vp8.cc
 modules/rtp_rtcp/source/rtp_format_vp9.cc
 modules/rtp_rtcp/source/rtp_generic_frame_descriptor.cc
 modules/rtp_rtcp/source/rtp_generic_frame_descriptor_extension.cc
 modules/rtp_rtcp/source/rtp_header_extension_map.cc
 modules/rtp_rtcp/source/rtp_header_extension_size.cc
 modules/rtp_rtcp/source/rtp_header_extensions.cc
 modules/rtp_rtcp/source/rtp_packet.cc
 modules/rtp_rtcp/source/rtp_packet_history.cc
 modules/rtp_rtcp/source/rtp_packet_received.cc
 modules/rtp_rtcp/source/rtp_packet_to_send.cc
 modules/rtp_rtcp/source/rtp_packetizer_av1.cc
 modules/rtp_rtcp/source/rtp_rtcp_impl.cc
 modules/rtp_rtcp/source/rtp_sender.cc
 modules/rtp_rtcp/source/rtp_sender_audio.cc
 modules/rtp_rtcp/source/rtp_sender_egress.cc
 modules/rtp_rtcp/source/rtp_sender_video.cc
 modules/rtp_rtcp/source/rtp_sender_video_frame_transformer_delegate.cc
 modules/rtp_rtcp/source/rtp_sequence_number_map.cc
 modules/rtp_rtcp/source/rtp_utility.cc
 modules/rtp_rtcp/source/rtp_video_header.cc
 modules/rtp_rtcp/source/source_tracker.cc
 modules/rtp_rtcp/source/time_util.cc
 modules/rtp_rtcp/source/tmmbr_help.cc
 modules/rtp_rtcp/source/transformable_encoded_frame.cc
 modules/rtp_rtcp/source/ulpfec_generator.cc
 modules/rtp_rtcp/source/ulpfec_header_reader_writer.cc
 modules/rtp_rtcp/source/ulpfec_receiver_impl.cc
 modules/rtp_rtcp/source/video_rtp_depacketizer.cc
 modules/rtp_rtcp/source/video_rtp_depacketizer_av1.cc
 modules/rtp_rtcp/source/video_rtp_depacketizer_generic.cc
 modules/rtp_rtcp/source/video_rtp_depacketizer_h264.cc
 modules/rtp_rtcp/source/video_rtp_depacketizer_raw.cc
 modules/rtp_rtcp/source/video_rtp_depacketizer_vp8.cc
 modules/rtp_rtcp/source/video_rtp_depacketizer_vp9.cc

 pc/dtls_srtp_transport.cc
 pc/dtls_transport.cc
 pc/external_hmac.cc
 pc/ice_transport.cc
 pc/jsep_ice_candidate.cc
 pc/media_protocol_names.cc
 pc/rtp_media_utils.cc
 pc/rtp_transport.cc
 pc/sdp_serializer.cc
 pc/session_description.cc
 pc/simulcast_description.cc
 pc/srtp_filter.cc
 pc/srtp_session.cc
 pc/srtp_transport.cc

 logging/rtc_event_log/ice_logger.cc
 logging/rtc_event_log/events/rtc_event_ice_candidate_pair.cc
 logging/rtc_event_log/events/rtc_event_ice_candidate_pair_config.cc
 logging/rtc_event_log/events/rtc_event_dtls_transport_state.cc
 logging/rtc_event_log/events/rtc_event_dtls_writable_state.cc
 logging/rtc_event_log/events/rtc_event_rtcp_packet_incoming.cc
 logging/rtc_event_log/events/rtc_event_rtcp_packet_outgoing.cc
 logging/rtc_event_log/events/rtc_event_rtp_packet_incoming.cc
 logging/rtc_event_log/events/rtc_event_rtp_packet_outgoing.cc

 system_wrappers/source/clock.cc
 system_wrappers/source/metrics.cc
 system_wrappers/source/rtp_to_ntp_estimator.cc
 system_wrappers/source/field_trial.cc

)

add_library(${PROJECT_NAME} STATIC ${SRCS})
