cmake_minimum_required(VERSION 3.5)

project(webrtc_base)

set(BASE_SRCS
    copy_on_write_buffer.cc
    checks.cc
    #system/warn_current_thread_is_deadlocked.cc
    zero_memory.cc
    synchronization/rw_lock_wrapper.cc
    synchronization/yield_policy.cc
    synchronization/rw_lock_posix.cc
    rate_statistics.cc
    async_resolver_interface.cc
    socket_address.cc
    ip_address.cc
    logging.cc
    strings/string_builder.cc
    string_encode.cc
    string_to_number.cc
    thread.cc
    critical_section.cc
    location.cc
    message_handler.cc
    platform_thread_types.cc
    http_common.cc
    physical_socket_server.cc
    async_socket.cc
    async_tcp_socket.cc
    async_udp_socket.cc
    socket.cc
    socket_adapters.cc
    async_packet_socket.cc
    proxy_info.cc
    network/sent_packet.cc
    time_utils.cc
    crypt_string.cc
    buffer_queue.cc
    ssl_stream_adapter.cc
    stream.cc
    ssl_certificate.cc
    ssl_fingerprint.cc
    network_constants.cc
    rtc_certificate.cc
    network.cc
    numerics/event_based_exponential_moving_average.cc
    rate_tracker.cc
    byte_buffer.cc
    network_monitor.cc
    net_helper.cc
    weak_ptr.cc
    synchronization/sequence_checker.cc
    network_route.cc
    ssl_identity.cc
    helpers.cc
    async_invoker.cc
    event.cc
    unique_id_generator.cc
    bit_buffer.cc
    message_digest.cc
    race_checker.cc
    random.cc
    event_tracer.cc
    rate_limiter.cc
    third_party/base64/base64.cc
    string_utils.cc
    #strings/json.cc
    rtc_certificate_generator.cc
    platform_thread.cc
    signal_thread.cc
    null_socket_server.cc
    net_helpers.cc
    openssl_digest.cc
    openssl_stream_adapter.cc
    openssl_identity.cc
    openssl_certificate.cc
    openssl_utility.cc
    openssl_adapter.cc
    openssl_session_cache.cc
    ssl_adapter.cc
    ifaddrs_converter.cc
    crc32.cc
    experiments/struct_parameters_parser.cc
    experiments/field_trial_parser.cc
    experiments/field_trial_units.cc
    memory/fifo_buffer.cc
)

add_library(${PROJECT_NAME} STATIC ${BASE_SRCS})
